<resources>
    <string name="title_activity_menu">MenuActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_transferencia">Transferência</string>
    <string name="menu_sair">Sair</string>
    <string name="menu_perfil">Perfil</string>
    <string name="menu_extrato">Extrato</string>
    <string name="app_name">yaman-bank</string>
    <string name="entrar">Entrar</string>
    <string name="yamanBanking">Yaman Banking</string>
    <string name="criarConta">Criar Conta</string>
    <string name="acesse_sua_conta">Faça login para acessar sua conta</string>
    <string name="agencia">Agencia</string>
    <string name="conta">Conta (com digito)</string>
    <string name="senha">Senha(4 digito)</string>
    <string name="salvar_dados">Salvar Dados</string>
    <string name="acesse_digital">Acesso por digital</string>
    <string name="entrar_login">Entrar</string>
    <string name="esqueci_senha">Esqueci minha senha</string>
    <string name="seu_saldo">Seu saldo:</string>
    <string name="valor_saldo">R$ 00,00</string>
    <string name="valor">Valor</string>
    <string name="cancelar">Cancelar</string>
    <string name="confirmar">Confirmar</string>
    <string name="digite_senha">Digite sua senha</string>
    <string name="ok">OK</string>
    <string name="bem_vindo">Bem vindo ao Yaman Banking</string>
    <string name="nome">Nome</string>
    <string name="telefone">Telefone</string>
    <string name="email">Email</string>
    <string name="editar">Editar</string>
    <string name="salvar">Salvar</string>

    <string name="saldo_conta_poupanca">Saldo em conta poupança</string>
    <string name="saldo_conta_corrente">Saldo em conta corrente</string>
    <string-array name="saldoAtualizado">
        <item>Saldos atualizados com data de </item>
        <item><b> 01/01/0001 </b></item>
        <item> como referência</item>
    </string-array>
    <string-array name="ultimaTransferencia">
        <item>Última transferência em </item>
        <item> <b>01/01/2000</b> </item>
        <item> <b>no valor de</b> </item>
        <item> <b>R$ 5000,00</b></item>
    </string-array>
    <string name="title_activity_contas">ContasActivity</string>

    <string name="extrato_conta_corrente">Conta Corrente</string>
    <string name="extrato_conta_poupanca">Conta Poupança</string>

    <string-array name="servico">
        <item>Alimentação</item>
        <item>Supermercado</item>
        <item>Lazer</item>
        <item>Serviços</item>
        <item>Serviços</item>
    </string-array>

    <string-array name="estabelecimento">
        <item>Outback Steak House</item>
        <item>Pão de Açucar</item>
        <item>Libertadores da América</item>
        <item>Mecânica dois irmãos</item>
        <item>Mecânica dois irmãos</item>
    </string-array>

    <string-array name="preco">
        <item>R$ 163,00</item>
        <item>R$ 78,00</item>
        <item>R$ 120,00</item>
        <item>R$ 89,00</item>
        <item>R$ 89,00</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>

