<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_transferencia"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_transferencia" />
        <item
            android:id="@+id/nav_extrato"
            android:icon="@drawable/ic_menu_send"
            android:title="@string/menu_extrato" />
        <item
            android:id="@+id/nav_perfil"
            android:icon="@drawable/ic_menu_share"
            android:title="@string/menu_perfil" />
        <item
            android:id="@+id/nav_sair"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_sair" />
    </group>
</menu>
